minikube/networking/sol22/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-redirect
  namespace: world
spec:
  hostnames:
    - secure.example.com
  parentRefs:
    - name: secure-gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "https"
            port: 443
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: "/"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-route
  namespace: world
spec:
  hostnames:
    - secure.example.com
  parentRefs:
    - name: secure-gateway
      sectionName: secure-tls   # bind to the HTTPS listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: secure-svc
          port: 80
